Added the Disassociate Features page for adding and removing features from a virtual server without actually changing the underlying configuration files.
Added APIs that allow Virtualmin to define the preferred left and right frame contents for a theme, rather than requiring theme authors to write code for this.
---- Changes since 4.13 ----
Updated the phpMyAdmin script installer to version 4.3.8 and 4.0.10.8, Django to 1.7.4 and 1.4.19, FengOffice to 3.0.3, Ghost to 0.5.8, Moodle to 2.8.2, X2CRM to 5.0.2, CMS Made Simple to 1.11.12, Trac to 1.0.3, phpMyFAQ to 2.8.19, OpenCart to 2.0.1.1, Roundcube to 1.0.5, Mantis to 1.2.19, Node.JS to 0.10.36, and PiWik to 2.10.0.
SNI (multiple SSL certs on the same IP) is now always assumed to be usable by clients, as long as the web server supports it.
Added support for creating and editing DMARC DNS records for virtual servers, which specify a policy for other mail servers to be applied to email that does not pass SPF or DKIM validation.
---- Changes since 4.14 ----
Updated the Moodle script installer to version 2.8.3, phpMyAdmin to 4.3.10, Node.js to 0.12.0, phpMyFAQ to 2.8.21, Trac to 1.0.4, ZenPhoto to 1.4.7, Roundcube to 1.1.0, Pydio to 6.0.3, X2CRM to 5.0.4, Z-Push to 2.2.0, extPlorer to 2.1.7, Wordpress to 4.1.1, Piwik to 2.11.1, CMS Made Simple to 1.11.13, Django to 1.7.5, Dokuwiki to 2014-09-29c, Joomla to 3.4.0, ownCloud to 8.0.0, Ghost to 0.5.9, and FengOffice to 3.0.7.
Added the Running Backups page for viewing scheduled and manually started backups that are currently executing.
The password recovery email address can now be edited for mailbox users via the Edit User page and the modify-user API command. The password reset process can also be triggered from within Virtualmin, as well as using the password recovery plugin.
Added support for backing up to and restoring from Dropbox, similar to Virtualmin's existing Google Cloud Storage backup feature.