@@ -1487,3 +1487,4 @@ Updated the Moodle script installer to version 2.8.3, phpMyAdmin to 4.3.10, Node
 Added the Running Backups page for viewing scheduled and manually started backups that are currently executing.
 The password recovery email address can now be edited for mailbox users via the Edit User page and the modify-user API command. The password reset process can also be triggered from within Virtualmin, as well as using the password recovery plugin.
 Added support for backing up to and restoring from Dropbox, similar to Virtualmin's existing Google Cloud Storage backup feature.
+Switch from the old dkim-milter package to OpenDKIM on CentOS 7 systems.
